--- a/package.json
+++ b/package.json
@@ -19,6 +19,13 @@
     "@angular/platform-browser": "~10.0.4",
     "@angular/platform-browser-dynamic": "~10.0.4",
     "@angular/router": "~10.0.4",
+    "bootstrap": "^4.5.2",
+    "chart.js": "^2.9.3",
+    "jquery": "^3.5.1",
+    "ng2-charts": "^2.3.3",
+    "ngx-webstorage": "^6.0.0",
+    "ngx-webstorage-service": "^4.1.0",
+    "popper.js": "^1.16.1",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
