--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@angular/animations": "~10.0.4",
     "@angular/common": "~10.0.4",
+    "@angular/cli": "^10.0.6",
+    "@angular/compiler-cli": "^10.0.9",
     "@angular/compiler": "~10.0.4",
     "@angular/core": "~10.0.4",
     "@angular/forms": "~10.0.4",
@@ -31,7 +33,7 @@
     "popper.js": "^1.16.1",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
-    "typescript": "~2.3.3",
+    "typescript": "~2.3.4",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
