--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "popper.js": "^1.16.1",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
-    "typescript": "~2.3.4",
-    "zone.js": "~0.10.3"
+    "zone.js": "~0.10.3",
+    "typescript": "^2.3.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1000.3",
@@ -55,7 +55,8 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~2.3.4"
+    "typescript": "^2.3.4"
+    
   },
   "engines": {
     "node": "12.18.2",
