--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~10.0.4",
-    "@angular/common": "~10.0.4",
     "@angular/cli": "^10.0.6",
-    "@angular/compiler-cli": "^10.0.9",
+    "@angular/common": "~10.0.4",
     "@angular/compiler": "~10.0.4",
+    "@angular/compiler-cli": "^10.0.9",
     "@angular/core": "~10.0.4",
     "@angular/forms": "~10.0.4",
     "@angular/platform-browser": "~10.0.4",
@@ -27,14 +27,12 @@
     "express": "^4.17.1",
     "jquery": "^3.5.1",
     "ng2-charts": "^2.3.3",
-    "ngx-webstorage": "^6.0.0",
-    "ngx-webstorage-service": "^4.1.0",
     "path": "^0.12.7",
     "popper.js": "^1.16.1",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.3",
-    "typescript": "^3.9.5"
+    "typescript": "^3.9.5",
+    "zone.js": "~0.10.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1000.3",
