--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~10.0.4",
     "@angular/platform-browser-dynamic": "~10.0.4",
     "@angular/router": "~10.0.4",
+    "@angular/service-worker": "~10.0.4",
     "bootstrap": "^4.5.2",
     "chart.js": "^2.9.3",
     "express": "^4.17.1",
