--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
+    "test-headless": "ng test --watch=false --browsers=ChromeHeadless",
     "heroku-postbuild": "ng build --prod"
   },
   "private": true,
